--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="">
-<link href="/react-codes-input/dist/css/index-983add883379e4941329.css" rel="stylesheet"></head>
+<link href="/react-codes-input/dist/css/index-fe4d8671afd16ac74610.css" rel="stylesheet"></head>
 
 <body>
     <div style="margin: 0 auto;text-align: center;">
         <h1>react-codes-input</h1>
-        <a href="https://github.com/edwardfhsiao/react-codes-input">fork me on Github@edwardfhsiao</a></div>
+        <a href="https://github.com/edwardfxiao/react-codes-input">fork me on Github@edwardfxiao</a></div>
     <br/>
     <br/>
     <div class="root" id="root"></div>
     
-<script type="text/javascript" src="/react-codes-input/dist/index-75ac336017d91174fd4c.js"></script></body>
+<script type="text/javascript" src="/react-codes-input/dist/index-fa761a159d20a98fabf9.js"></script></body>
 
 </html>
